weather/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather
  # namespace: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - image: bletvaska/weather
        name: weather
