weather/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather
  name: weather
  # namespace: weather
spec:
  ports:
  - name: service
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: weather
  type: ClusterIP
