weather/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: weather
            port:
              number: 8000
        path: /weather
        pathType: Prefix
